--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3394,7 +3394,8 @@
                                     <div class="info-item">
                                         <label>공사 담당자</label>
                                         <input type="text" class="customer-field" data-field="manager"
-                                            placeholder="원프로 소장 (010-4650-7013)" value="원프로 소장 (010-4650-7013)" oninput="updateCustomerField(this)">
+                                            placeholder="원프로 소장 (010-4650-7013)" value="원프로 소장 (010-4650-7013)"
+                                            oninput="updateCustomerField(this)">
                                     </div>
                                     <div class="info-item">
                                         <label>계약일</label>
@@ -3946,7 +3947,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <div class="no-print"
+                            <div
                                 style="background:#f0f7ff; padding:12px 16px; border-radius:8px; margin-bottom:16px; font-size:13px; color:#004182; border:1px solid #c2e0ff;">
                                 <strong>💡 공사 진행 안내사항</strong>
                                 <ul style="margin: 5px 0 0 20px; padding: 0; list-style-type: disc; line-height: 1.6;">
@@ -4057,7 +4058,7 @@
                                     </table>
                                 </div>
 
-                                <div class="no-print"
+                                <div
                                     style="background:#f0f7ff; padding:12px 16px; border-radius:8px; margin-bottom:16px; font-size:13px; color:#004182; border:1px solid #c2e0ff;">
                                     <strong>💡 A/S(사후관리) 안내 및 유의사항</strong>
                                     <ul
@@ -5821,7 +5822,7 @@
                     }
                     managerInput.value = currentData.manager;
 
-                    managerInput.oninput = function () {
+                    managerInput.oninput = functio n () {
                         updateCustomerField(this);
                     };
                     managerInput.onchange = function () {
@@ -9371,7 +9372,7 @@
                 }
             } catch (error) {
                 console.error('샘플 삭제 실패:', error);
-                showToast('삭제 중 오류가 발생했습니다', 'error');
+                showToast('삭제 중 오류가 발생했습니다', 'er);
             }
         }
     </script>
